@@ -27,10 +27,10 @@
 
 #include <libspectrum.h>
 
-#include "debugger/debugger.h"
+#include "../../debugger/debugger.h"
 #include "win32internals.h"
-#include "z80/z80.h"
-#include "z80/z80_macros.h"
+#include "../../z80/z80.h"
+#include "../../z80/z80_macros.h"
 
 #include "debugger.h"
 
