@@ -29,18 +29,15 @@
 #include <stdlib.h>
 #include <windows.h>
 
-#include "display.h"
-#include "fuse.h"
-#include "keyboard.h"
-#include "machine.h"
-#include "settings.h"
-#include "snapshot.h"
-#include "spectrum.h"
-#include "tape.h"
-#include "utils.h"
-#ifdef USE_WIDGET
-#include "widget/widget.h"
-#endif				/* #ifdef USE_WIDGET */
+#include "../../display.h"
+#include "../../fuse.h"
+#include "../../keyboard.h"
+#include "../../machine.h"
+#include "../../settings.h"
+#include "../../snapshot.h"
+#include "../../spectrum.h"
+#include "../../tape.h"
+#include "../../utils.h"
 #include "win32keyboard.h"
 
 void
