@@ -25,20 +25,20 @@
 
 #include <config.h>
 
-#include "debugger/debugger.h"
-#include "display.h"
-#include "fuse.h"
-#include "menu.h"
+#include "../../debugger/debugger.h"
+#include "../../display.h"
+#include "../../fuse.h"
+#include "../../menu.h"
 #include "menu_data.h"
-#include "psg.h"
-#include "rzx.h"
-#include "screenshot.h"
-#include "settings.h"
-#include "snapshot.h"
-#include "tape.h"
-#include "ui/ui.h"
-#include "ui/uijoystick.h"
-#include "utils.h"
+#include "../../psg.h"
+#include "../../rzx.h"
+#include "../../screenshot.h"
+#include "../../settings.h"
+#include "../../snapshot.h"
+#include "../../tape.h"
+#include "../ui.h"
+#include "../uijoystick.h"
+#include "../../utils.h"
 #include "win32internals.h"
 #include "win32keyboard.h"
 #include "win32display.h"
